# grate

./: README.md  autogen.sh  autogen.sh.bak  configure.ac
include/: Makefile.am
src/libgrate/: Makefile.am
src/libhost1x/: x11-display.c
tools/: Makefile.am
